--- a/vr.html
+++ b/vr.html
@@ -1,1 +1,15 @@
-.
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-box position="0 3 -4" rotation="0 45 0" color="#0FC372"></a-box>
+ <a-box position="0 4 -4" rotation="0 45 0" color="#FF8D00"></a-box>
+      <a-sphere position="0 1.40 -4" radius="1.15" color="#FFAAE5"></a-sphere>
+      <a-cylinder position="-0.4 0.5 -3" radius="0.35" height="0.5" color="#BF0013"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="90 0 0" width="6" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
+  </body>
+</html>
